--- a/style/style.css
+++ b/style/style.css
@@ -125,6 +125,18 @@ h4 {
 	padding: 1.5em;
 }
 
+footer {
+    clear: both;
+    margin: 2em 0 1em;
+}
+
+div.box {
+    margin-bottom: 1.5em;
+    padding: 0.65em;
+    background: #ecf2f5;
+    border: 1px solid #bcd;
+}
+
 .left {
 	float: left;
 	margin: 0;
