--- a/style/style.css
+++ b/style/style.css
@@ -129,6 +129,11 @@ footer {
     clear: both;
     margin: 2em 0 1em;
 }
+    footer.table {
+        margin: 0;
+        text-align: center;
+        font-size: 0.85em;
+    }
 
 div.box {
     margin-bottom: 1.5em;
