--- a/style/style.css
+++ b/style/style.css
@@ -129,7 +129,7 @@ footer {
     clear: both;
     margin: 2em 0 1em;
 }
-    footer.table {
+    footer,table,th,td {
         margin: 0;
         text-align: center;
         font-size: 0.85em;
@@ -138,7 +138,7 @@ footer {
 div.box {
     margin-bottom: 1.5em;
     padding: 0.65em;
-    background: #ecf2f5;
+    /*background: #ecf2f5;*/
     border: 1px solid #bcd;
 }
 
