Fix footer contacts table

--- a/style/style.css
+++ b/style/style.css
@@ -131,7 +131,7 @@ footer {
 }
     table {
         margin: 0 auto;
-        text-align: center;
+        text-align: left;
         font-size: 0.85em;
     }
 
