--- a/style/style.css
+++ b/style/style.css
@@ -125,6 +125,18 @@ h4 {
 	padding: 1.5em;
 }
 
+#intro {
+    margin: -0.5em 0 0 0;
+    font-size: .9em;
+    text-align: right;
+}
+
+#content-right {
+    float: left;
+    width: 300px;
+    margin-left: -300px;
+}
+
 footer {
     clear: both;
     margin: 2em 0 1em;
