--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,24 @@ body {
 	margin: 0;
 }
 
+/* link style */
 a {
-	color: #87bfcf;
+    text-decoration: none;
 }
+
+    a:link,
+    a:visited,
+    th a:visited {
+        color: #08c;
+    }
+
+    a:hover,
+    a:focus,
+    a:visited,
+    a:visited:hover {
+        color: #08c;
+        text-decoration: underline;
+    }
 
 #header a, #menu a {
 	text-decoration: none;
@@ -68,4 +83,23 @@ a {
     float: left;
     width: 300px;
     margin-left: -300px;
+}
+
+div.nav-border {
+    margin-bottom: 1.5em;
+    padding: 0.65em;
+    border-left: 1px solid #bcd;
+}
+
+/* home: sidebar navigation */
+#nav-sidebar ul {
+    list-style: none;
+    margin: 0.5em 0 0.5em 1em;
+    padding: 0;
+}
+
+.right {
+	float: right;
+	margin: 0;
+	padding: 0;
 }
