--- a/style/style.css
+++ b/style/style.css
@@ -121,6 +121,14 @@ div.nav-border {
 	padding: 0;
 }
 
+code {
+  font-size: 105%;
+  color: #e0e6ec;
+  background-color: #151b23;
+  padding: 2px;
+  word-wrap: break-word;
+}
+
 
 /* responsive */
 @media only screen and (max-width: 768px) {
