--- a/style/style.css
+++ b/style/style.css
@@ -61,8 +61,6 @@ a {
 	overflow: hidden;
 	background-color: #587397;
 	padding: 0.7ex;
-   position: sticky;
-   top: 0;
 }
 
 #menu a {
@@ -142,6 +140,24 @@ pre code {
    overflow: auto;
 }
 
+div.quicklink {
+   height: 200vh;
+   position: sticky;
+   z-index: 1;
+   top: 0;
+   left: 0;
+   background-color: #111;
+	float: left;
+	margin: 0 1px 0 0;
+	padding: 20px 10px;
+	border-right: 1px dotted #ccc;
+	width: 200px;
+   overflow: auto;
+}
+
+div.install {
+   margin-left: 200px;
+}
 
 /* responsive */
 @media only screen and (max-width: 768px) {
